--- a/composer.json
+++ b/composer.json
@@ -10,5 +10,13 @@
         }
     ],
     "minimum-stability": "dev",
-    "require": {}
+    "require": {
+        "php": "^8.0",
+        "guzzlehttp/guzzle": "^7.3@dev"
+    },
+    "autoload": {
+        "psr-4": {
+            "ColdCGH\\User\\": "./src"
+        }
+    }
 }
