--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": "^8.0",
-        "guzzlehttp/guzzle": "^7.3@dev"
+        "php": "^8.0"
     },
     "autoload": {
         "psr-4": {
